# fast-api

./: .gitignore  README.md  requirements.txt
1-refresher/: 1-variables.py  10-dictionaries.py  11-functions.py  12-oop.py  13. inheritance.py  2-comments.py  3-string formatting.py  4-user input.py  5-list.py  6-sets.py  7-booleans operators.py  8-flow control.py  9-loops.py
1-refresher/12 - imports/: grade_average_service.py  homework_grades.py  standard_lib.py
1-refresher/13 - OOP/: Enemy.py  Main.py  Ogre.py  Zombie.py
1-refresher/14 - OOP Battle/: Enemy.py  Hero.py  Main.py  Ogre.py  (+2 more)
2-projects/: pyproject.toml
2-projects/src/project_1/: books.json  main.py
2-projects/src/project_2/: main.py
2-projects/src/project_3/: database.py  models.py  todosapp.db
2-projects/src/project_3/routers/: auth.py  users.py
2-projects/src/project_4/: alembic.ini  database.py  main.py  models.py
2-projects/src/project_4/alembic/: env.py
2-projects/src/project_4/alembic/versions/: a61e4fd13239_create_phone_number_for_user_column.py
2-projects/src/project_4/routers/: admin.py  auth.py  todos.py
2-projects/src/project_4/test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_users.py  utils.py
2-projects/src/project_5/backend/: config.py  database.py  main.py  models.py
2-projects/src/project_5/backend/middleware/: logging.py
2-projects/src/project_5/backend/routes/: auth.py  todos.py  users.py
2-projects/src/project_5/backend/routes/utils/: auth_util.py
2-projects/src/project_5/frontend/: package-lock.json  package.json
