[project]
name = "2-projects"
version = "0.1.0"
description = "A list of fast api projects"
authors = [
    {name = "chrisbooden",email = "101955242+chrisbooden@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt (>=4.3.0,<5.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
package-mode = false
packages = [
    {include = "project_0", from = "src"},
    {include = "project_1", from = "src"},
    {include = "project_2", from = "src"},
    {include = "project_3.5", from = "src"},
    {include = "project_4", from = "src"},
    {include = "project_5", from = "src"},
    {include = "TodoAoo", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
